--- a/manifest.webmanifest.json
+++ b/manifest.webmanifest.json
@@ -36,6 +36,16 @@
       "src": "assets/img/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "assets/img/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/img/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "splash_pages": null
