--- a/manifest.webmanifest.json
+++ b/manifest.webmanifest.json
@@ -3,7 +3,7 @@
   "short_name": "La Chouette Agence",
   "theme_color": "#fefefe",
   "background_color": "#f3976c",
-  "display": "browser",
+  "display": "fullscreen",
   "Scope": "https://lulubaroy.github.io/La_Chouette_Agence_SEO/html-pages/contact.html",
   "start_url": "https://lulubaroy.github.io/La_Chouette_Agence_SEO",
   "icons": [
